# senders_receivers

./: Cargo.toml  LICENSE  README.md
src/: embarrasingly_parallel.rs  ensure_started.rs  errors.rs  functor.rs  io.rs  just.rs  just_done.rs  just_error.rs  let_done.rs  let_error.rs  let_value.rs  lib.rs  refs.rs  scheduler.rs  scope.rs  split.rs  start_detached.rs  stop_if_requested.rs  stop_token.rs  sync.rs  sync_wait.rs  then.rs  traits.rs  transfer.rs  transfer_when_all.rs  tuple.rs  tuple_cat.rs  upon_done.rs  upon_error.rs  when_all.rs  when_all_transfer.rs
src/embarrasingly_parallel/: cross_thread_pool.rs  pool.rs  tasks.rs  thread_local_pool.rs  worker.rs
src/io/: default.rs  write.rs
src/let_value/: functor.rs
src/scope/: receiver.rs  scope_data.rs  scope_fn_argument.rs  scope_fn_receiver.rs  scope_fn_send_receiver.rs  scoped_receiver.rs  scoped_receiver_send.rs
src/stop_token/: never.rs  stoppable.rs
src/sync/: cross_thread_channel.rs  same_thread_channel.rs
src/sync_wait/: same_thread_channel.rs
src/tuple/: cat.rs  distribute.rs  macros.rs
