[package]
name = "senders_receivers"
version = "0.0.8"
edition = "2021"
authors = ["Ariane"]
license = "BSD-2-Clause"
description = "Senders/Receivers implementation for Rust."
repository = "https://github.com/nahratzah/senders_receivers"
keywords = ["execution", "senders", "receivers"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.8"
rand = "0.8"
mio = { version = "0.8.11", features = ["os-poll"] }

[target."cfg(any(target_os=\"freebsd\", target_os=\"dragonfly\"))".dependencies]
mio-aio = "0.9.0"
